--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webpack-imgmini",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "a image compress  use webpack",
   "main": "index.js",
   "bin": "index.js",
@@ -15,12 +15,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/calamus0427/calamus-vue-music.git"
+    "url": "git+https://github.com/robinLiu1989/webpack-imgmini.git"
   },
+  "bugs": {
+    "url": "https://github.com/robinLiu1989/webpack-imgmini/issues"
+  },
+  "homepage": "https://github.com/robinLiu1989/webpack-imgmini",
   "license": "MIT",
   "dependencies": {
     "file-loader": "^2.0.0",
-    "imagemin-webpack-plugin": "^2.3.0",
     "url-loader": "^1.1.2",
     "webpack": "^3.11.0",
     "image-webpack-loader": "^4.6.0"
